# langchain-sandbox

./: Dockerfile  Makefile  pyproject.toml
src/book/01_setting/: sample.py  sample_stream.py
src/book/02_modelio/: language_model.py  language_model_streaming.py  output_parser.py  prompt.py
src/book/03_retrieval/: chat.py  sample_vector.py
